clusters/production/apps/authelia-production/namespace-authelia-production.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: authelia-production
  labels:
    app.kubernetes.io/part-of: production
    pbs.wsh.no/encryption-keyfile: "true"
